# Enigma-Machine

./: .dockerignore  .gitignore  CMakeLists.txt  README.md  dockerfile  documenation.md  enigma  enigma_display.cpp  enigma_display.h  enigma_machine.cpp  enigma_machine.h  main  main.cpp  plugboard.cpp  plugboard.h  rotor.cpp  rotor.h  syntax_cheatsheet.md  technical_documenation.md  tempCodeRunnerFile.cpp  test_build.sh
.github/workflows/: ci.yml  ci_simple.yml  quick_test.yml
docs/: documenation.md  main.cpp  pseudocode.txt
tests/: CMakeLists.txt  enigma_machine_test.cpp  plugboard_test.cpp  rotor_test.cpp
